src/libelec.h

enum {
    ELEC_MAX_SRCS = 64
};
typedef struct elec_sys_s elec_sys_t;
typedef struct elec_comp_s elec_comp_t;
/**
 * Identifies the type of electrical component. Every component in a libelec
 * network must be one of these enumerations.
 */
typedef enum {
	/**
	 * A battery is a component which can hold a certain amount of
	 * energy. This energy can then either be discharged (when a load
	 * is connected to the battery), or recharged (when a generator
	 * or energy source of a higher voltage than the battery's output
	 * voltage is attached). The rate of recharge is controlled by
	 * the battery's internal resistance, while the rate of discharge
	 * is largely driven by the demands of the downstream loads. To
	 * simulate the effects of internal battery resistance to
	 * discharge, a battery will depress its output voltage as it
	 * approaches its power flow limits.
	 */
	ELEC_BATT,
	/**
	 * A generator is a component which converts mechanical input
	 * energy into electrical output energy. You MUST supply a
	 * callback using libelec_gen_set_rpm_cb(), which informs
	 * libelec how fast the input shaft of the generator is turning.
	 * @see libelec_gen_set_rpm_cb()
	 * @see elec_get_rpm_cb_t
	 */
	ELEC_GEN,
	/**
	 * A Transformer-Rectifier Unit is a component which performs two
	 * tasks:
	 *
	 * 1. It transforms the voltage of the input to a different voltage
	 *	on the output.
	 * 2. It rectifies AC to DC
	 *
	 * libelec's TRUs are simple devices, whose output voltage always
	 * scales in proportion to their input voltage. Thus, they do not
	 * provide a stabilized output voltage, but instead depend on the
	 * ability of the AC-side generator to supply a stable voltage. A
	 * TRU doesn't permit reverse current flow from its output side to
	 * the input.
	 */
	ELEC_TRU,
	/**
	 * An inverter is conceptually the opposite of a TRU. It changes
	 * DC power into AC power, and optionally also changes the input
	 * voltage to a different output voltage.
	 * @see \ref ELEC_TRU
	 */
	ELEC_INV,
	/**
	 * A transformer changes the AC voltage on its input into a
	 * different AC voltage on its output. The voltage ratio is fixed
	 * based on the ratio of the number of turns between the
	 * transformer's primary and secondary windings.
	 */
	ELEC_XFRMR,
	/**
	 * A load is a consumer of electrical energy. This can be anything
	 * you need it to be. libelec tells you if the load is powered
	 * (and how much energy it is consuming), and you then implement
	 * your custom systems behaviors based on that energy usage. Loads
	 * can either have internal power supplies, or be simple
	 * unregulated energy consumers. You can customize all of this
	 * behavior to suit your needs.
	 */
	ELEC_LOAD,
	/**
	 * Buses are the interconnecting "tissue" of the libelec network.
	 * Every component on the network must connect to one or more
	 * buses, and the buses themselves serve to distribute energy
	 * flows throughout the network. libelec buses are idealized
	 * power distribution mechanisms with no internal resistance.
	 */
	ELEC_BUS,
	/**
	 * Circuit breakers are devices which allow the passage of
	 * electrical current when closed. If open, current is not
	 * allowed to flow. A breaker can become open by either by
	 * manual pilot action, or automatically if the current flowing
	 * through the breaker exceeds the breaker's maximum rating. As
	 * such, circuit breakers are safety devices which prevent
	 * excessive current draw to protect the electrical network from
	 * damage due to faults or short-circuits.
	 *
	 * libelec assumes CBs as being specifically thermal circuit
	 * breakers, which are breakers where a small amount of energy
	 * is used to heat up an internal filament. This amount of
	 * energy loss is carefully callibrated such that when current
	 * flow through the breaker exceeds its rating, the filament
	 * deforms sufficiently to trigger an internal control circuit,
	 * which then opens the breaker. As such, thermal breakers have
	 * a certain amount of "inertia" before responding. If the
	 * current exceedance is very brief and/or not very high, the
	 * filament's thermal inertia might cause the breaker not to
	 * "trip." Conversely, when the breaker trips, the filament
	 * might remain very hot and must cool off - the operator must
	 * wait a few seconds before attempting to close the breaker
	 * again, to account for this cooling period.
	 */
	ELEC_CB,
	/**
	 * Shunts are current measuring devices inserted in-line with
	 * a circuit. In reality, shunts are very small, carefully
	 * callibrated resistors, which cause a small amount of voltage
	 * drop across their leads. This amount of voltage drop is then
	 * measured using a voltmeter and converted into a current
	 * measurement mathematically.
	 *
	 * Since a properly sized shunt is meant to only cause a very
	 * small voltage drop in the circuit, libelec shunts are
	 * idealized devices which cause no voltage drop at all. You
	 * can also use these idealized shunts to represent other
	 * current measuring devices, such as AC current clamps (which
	 * cause no voltage drop in the circuit).
	 */
	ELEC_SHUNT,
	/**
	 * Ties are devices which connect two or more buses together.
	 * You can think of ties as a generalization of contactors and
	 * relays. Each of the endpoints of a tie has two possible
	 * states: tied or not tied. When tied, the endpoint allows
	 * current to pass (in any direction) to all other endpoints
	 * which are currently tied. Conceptually, the tie behaves as
	 * a single electrical node, with links to the outside world
	 * which can be dynamically connected and disconnected:
	 *```
	 *    4-pole tie fully open                B & C tied, A & D open
	 *    (no current can flow)           (current can flow between B & C)
	 *
	 *          A o   o C                           A o   o B
	 *                                                   /
	 *              +                                   +
	 *                                                 /
	 *          B o   o D                           C o   o D
	 *
	 *
	 *      A & B tied, C & D open              All endpoints tied
	 * (current can flow between A & B)   (current can flow between all)
	 *
	 *          A o   o B                           A o   o B
	 *             \ /                                 \ /
	 *              +                                   +
	 *                                                 / \
	 *          C o   o D                           C o   o D
	 *```
	 */
	ELEC_TIE,
	/**
	 * A diode is a component which prevents current flow opposite to
	 * the diode's forward sense. libelec's diode are DC-only devices
	 * and cannot be used on AC circuits. Use a component of type
	 * ELEC_TRU to implement an AC-to-DC rectifier.
	 */
	ELEC_DIODE,
	/**
	 * This is a pseudo component, only used placing text labels on
	 * the graphical network drawing. It plays no role in the actual
	 * electrical simulation.
	 */
	ELEC_LABEL_BOX
} elec_comp_type_t;
/**
 * This is the callback type used by batteries to determine the temperature
 * of the battery. Temperature has a significant effect on a battery's
 * ability to provide current, as well as its absolute energy capacity.
 * @return The temperature the battery in **Kelvin**.
 */
typedef double (*elec_get_temp_cb_t)(elec_comp_t *comp, void *userinfo);
/**
 * This is the callback type used by generators to determine the speed
 * of the generator's input shaft, which is then used for determining
 * the generator's output voltage and frequency behavior. This callback
 * is installed for generators using libelec_gen_set_rpm_cb().
 * @note You DON'T have to set a generator rpm callback. You can instead
 *	call libelec_gen_set_rpm() regularly to set the rpm value directly.
 * @param comp The component for which the generator rpm is being queried.
 * @param userinfo Custom userinfo pointer, which was previously set up
 *	on the component using libelec_comp_set_userinfo().
 * @return The generator rpm, using the same units as what you have used
 *	for the `EXC_RPM`, `MIN_RPM` and `MAX_RPM` stanzas when defining
 *	the generator in the config file. libelec doesn't enforce any
 *	specific type of units for generator, so you can use whatever
 *	units are most convenient.
 * @see libelec_gen_set_rpm()
 */
typedef double (*elec_get_rpm_cb_t)(elec_comp_t *comp, void *userinfo);
/**
 * This is the callback type used by electrical loads for cases where
 * the caller has installed a custom load demand callback using
 * libelec_load_set_load_cb().
 * @param comp The component for which the load demand is being queried.
 * @param userinfo Custom userinfo pointer, which was previously set up
 *	on the component using libelec_comp_set_userinfo().
 * @return
 *	1. For components with stabilized power supplies (`STAB TRUE` in
 *	   the definition file), this callback must return the **power**
 *	   demand of the load in **Watts**.
 *	2. For components with unstabilized power supplies (`STAB FALSE`
 *	   in the definition file, the default), this callback must
 *	   return the **current** demand of the load in **Amps**.
 */
typedef double (*elec_get_load_cb_t)(elec_comp_t *comp, void *userinfo);
/**
 * Custom physics callback, which you can install using libelec_add_user_cb(),
 * or remove using libelec_remove_user_cb(). This will be called from the
 * physics calculation thread, allowing you perform precise accounting of
 * all physics state as it's being calculated.
 * @see libelec_add_user_cb()
 * @see libelec_remove_user_cb()
 */
typedef void (*elec_user_cb_t)(elec_sys_t *sys, bool pre, void *userinfo);
elec_sys_t *libelec_new(const char *filename);
void libelec_destroy(elec_sys_t *sys);
bool libelec_sys_start(elec_sys_t *sys);
void libelec_sys_stop(elec_sys_t *sys);
bool libelec_sys_is_started(const elec_sys_t *sys);
bool libelec_sys_can_start(const elec_sys_t *sys);
void libelec_sys_set_time_factor(elec_sys_t *sys, double time_factor);
double libelec_sys_get_time_factor(const elec_sys_t *sys);
/* User callbacks */
void libelec_add_user_cb(elec_sys_t *sys, bool pre, elec_user_cb_t cb,
    void *userinfo);
void libelec_remove_user_cb(elec_sys_t *sys, bool pre, elec_user_cb_t cb,
    void *userinfo);
/* Finding devices and interrogating their configuration */
elec_comp_t *libelec_comp_find(elec_sys_t *sys, const char *name);
void libelec_walk_comps(const elec_sys_t *sys,
    void (*cb)(elec_comp_t *, void *), void *userinfo);
bool libelec_comp_is_AC(const elec_comp_t *comp);
elec_comp_type_t libelec_comp_get_type(const elec_comp_t *comp);
const char *libelec_comp_get_name(const elec_comp_t *comp);
const char *libelec_comp_get_location(const elec_comp_t *comp);
bool libelec_comp_get_autogen(const elec_comp_t *comp);
size_t libelec_comp_get_num_conns(const elec_comp_t *comp);
elec_comp_t *libelec_comp_get_conn(const elec_comp_t *comp, size_t i);
/* Electrical state querying */
double libelec_comp_get_in_volts(const elec_comp_t *comp);
double libelec_comp_get_out_volts(const elec_comp_t *comp);
double libelec_comp_get_in_amps(const elec_comp_t *comp);
double libelec_comp_get_out_amps(const elec_comp_t *comp);
double libelec_comp_get_in_pwr(const elec_comp_t *comp);
double libelec_comp_get_out_pwr(const elec_comp_t *comp);
double libelec_comp_get_in_freq(const elec_comp_t *comp);
double libelec_comp_get_out_freq(const elec_comp_t *comp);
double libelec_comp_get_incap_volts(const elec_comp_t *comp);
bool libelec_comp_is_powered(const elec_comp_t *comp);
double libelec_comp_get_eff(const elec_comp_t *gen);
unsigned libelec_comp_get_srcs(const elec_comp_t *comp,
    elec_comp_t *srcs[CONST_ARRAY_LEN_ARG(ELEC_MAX_SRCS)]);
/* Failures */
void libelec_comp_set_failed(elec_comp_t *comp, bool failed);
bool libelec_comp_get_failed(const elec_comp_t *comp);
void libelec_comp_set_shorted(elec_comp_t *comp, bool shorted);
bool libelec_comp_get_shorted(const elec_comp_t *comp);
double libelec_gen_set_random_volts(elec_comp_t *comp, double stddev);
double libelec_gen_set_random_freq(elec_comp_t *comp, double stddev);
/* Callback setup */
void libelec_comp_set_userinfo(elec_comp_t *comp, void *userinfo);
void *libelec_comp_get_userinfo(const elec_comp_t *comp);
void libelec_batt_set_temp_cb(elec_comp_t *batt, elec_get_temp_cb_t cb);
elec_get_temp_cb_t libelec_batt_get_temp_cb(const elec_comp_t *batt);
void libelec_gen_set_rpm_cb(elec_comp_t *gen, elec_get_rpm_cb_t cb);
elec_get_rpm_cb_t libelec_gen_get_rpm_cb(const elec_comp_t *gen);
void libelec_load_set_load_cb(elec_comp_t *load, elec_get_load_cb_t cb);
elec_get_load_cb_t libelec_load_get_load_cb(elec_comp_t *load);
/* Circuit breakers */
void libelec_cb_set(elec_comp_t *comp, bool set);
bool libelec_cb_get(const elec_comp_t *comp);
double libelec_cb_get_temp(const elec_comp_t *comp);
/* Ties */
void libelec_tie_set_list(elec_comp_t *comp, size_t list_len,
    elec_comp_t *const bus_list[STATIC_ARRAY_LEN_ARG(list_len)]);
void libelec_tie_set_all(elec_comp_t *comp, bool tied);
bool libelec_tie_get_all(elec_comp_t *comp);
size_t libelec_tie_get_list(elec_comp_t *comp, size_t cap,
    elec_comp_t *bus_list[STATIC_ARRAY_LEN_ARG(cap)]);
size_t libelec_tie_get_num_buses(const elec_comp_t *comp);
/* Batteries */
double libelec_batt_get_chg_rel(const elec_comp_t *batt);
void libelec_batt_set_chg_rel(elec_comp_t *batt, double chg_rel);
double libelec_batt_get_temp(const elec_comp_t *batt);
void libelec_batt_set_temp(elec_comp_t *batt, double T);
/* Miscellaneous */
bool libelec_chgr_get_working(const elec_comp_t *chgr);